# polynomial_plotter

./: CMakeLists.txt  README.md
src/: main.cpp  point.cpp  point.hpp  polynomial.cpp  polynomial.hpp
